05_bluegreen/yaml/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hands-on-news-green
  namespace: hands-on
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hands-on-news
      version: green
  template:
    metadata:
      name: hands-on-news
      labels:
        app: hands-on-news
        version: green
    spec:
      containers:
      - name: hands-on-news-green
        image: tanan/hands-on-news:v2 #v2を指定
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
