05_bluegreen/yaml/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hands-on-news-dr
  namespace: hands-on
spec:
  host: hands-on-news-svc
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
